tests/snapshots/file@number@trailing_dot.lox.snap
---
source: tests/common/mod.rs
description: "// [line 2] Error at ';': Expect property name after '.'.\n123.;\n"
input_file: test_files/number/trailing_dot.lox
---
OUT: 

===
ERR: 
  × Static errors

Error:   × expected Semicolon, found '.'
   ╭─[2:4]
 1 │ // [line 2] Error at ';': Expect property name after '.'.
 2 │ 123.;
   ·    ┬
   ·    ╰── here
   ╰────
